--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,18 @@
         android:textColor="@color/text_color"
         app:fontFamily="@font/ubunturegular"
         android:textSize="15sp"/>
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/progress_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tagline"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginHorizontal="20dp"
+        android:indeterminate="true"
+        app:indicatorColor="@color/background"
+        android:layout_marginTop="18sp"
+        android:translationZ="90dp"/>
     <androidx.core.widget.NestedScrollView
         android:id="@+id/box"
         android:layout_width="0dp"
@@ -44,8 +56,10 @@
         android:background="@drawable/home"
         android:padding="15dp">
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/bottom_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="gone">
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/metal1"
                 android:layout_width="0dp"
